--- a/EatTogether/Base.lproj/Main.storyboard
+++ b/EatTogether/Base.lproj/Main.storyboard
@@ -96,6 +96,37 @@
             </objects>
             <point key="canvasLocation" x="1268" y="2464"/>
         </scene>
+        <!--Login View Controller-->
+        <scene sceneID="xUs-ZC-yHF">
+            <objects>
+                <viewController storyboardIdentifier="loginViewController" id="ga0-qE-wT8" customClass="LoginViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="r3q-qp-3JV"/>
+                        <viewControllerLayoutGuide type="bottom" id="cPZ-5L-lkU"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="Y1W-cK-Lbt">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aXm-me-HVS">
+                                <rect key="frame" x="224.5" y="278" width="151" height="43"/>
+                                <inset key="contentEdgeInsets" minX="44" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                <state key="normal" title="Log in" backgroundImage="login-button-small.png">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="centerY" secondItem="aXm-me-HVS" secondAttribute="centerY" id="BPq-vq-SIX"/>
+                            <constraint firstAttribute="centerX" secondItem="aXm-me-HVS" secondAttribute="centerX" id="cNw-Vx-VFC"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="c0q-0D-EBn" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1148" y="-458"/>
+        </scene>
         <!--Main View Controller-->
         <scene sceneID="dyX-zM-jOV">
             <objects>
@@ -541,6 +572,7 @@
         <image name="Search.png" width="25" height="25"/>
         <image name="favoritos.png" width="25" height="26"/>
         <image name="home.png" width="26" height="26"/>
+        <image name="login-button-small.png" width="151" height="43"/>
         <image name="perfil.png" width="26" height="26"/>
     </resources>
 </document>
